# amprealize-enterprise

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  BUILD_TIMELINE.md  CLAUDE.md  docker-compose.enterprise.yml  env.enterprise.example  fly.api.toml  pyproject.toml
.github/agents/: NewFeature.agent.md  TestEngineer.agent.md  WorkItemPlanner.agent.md
.github/workflows/: _reusable-release.yml  behavior-benchmarks.yml  ci.yml  deploy-marketing-site.yml  deploy-prod-console.yml  deploy-prod.yml  nightly-backups.yml  publish-npm.yml  publish-pypi.yml  upstream-sync.yml
amprealize/: __init__.py  action_capturability.py  action_replay_executor.py  action_service_postgres.py  adapters.py  adherence_tracker.py  advanced_retrieval_contracts.py  advanced_retrieval_service.py  agent_execution_loop.py  agent_lifecycle_actions.py  agent_performance_contracts.py  agent_registry_service.py  agent_review_contracts.py  api.py  api_rate_limiting_contracts.py  auth_tokens.py  bci_contracts.py  bci_service.py  behavior_retriever.py  behavior_service.py  caps_enforcer.py  chat_action_router.py  cli.py  cli_dr.py  cloud_client.py  collaboration_contracts.py  collaboration_service.py  collaboration_service_postgres.py  context.py  context_composer.py  context_resolver.py  conversation_contracts.py  conversation_event_hub.py  conversation_realtime_redis.py  cost_alert_service.py  deploy_migrate.py  device_flow.py  edition.py  execution_gateway.py  execution_gateway_adapter.py  (+45 more)
amprealize/analytics/: telemetry_kpi_projector.py  warehouse.py
amprealize/auth/: consent_service.py  credential_encryption.py  github_app_service.py  github_credential_repository.py  invite_policy.py  jwt_service.py  llm_credential_repository.py  mfa_service.py  middleware.py  models.py  postgres_device_flow.py  user_auth_service.py
amprealize/billing/: __init__.py  api.py  service.py  webhook_routes.py
amprealize/boards/: __init__.py  contracts.py
amprealize/bootstrap/: detector.py  pack_migration.py
amprealize/breakeramp/: service.py
amprealize/config/: schema.py  settings.py
amprealize/crypto/: __init__.py
amprealize/enterprise/: __init__.py  auto_reflection.py  caps_enforcer.py  cloud_client.py  deploy_migrate.py  edition_tier.py
amprealize/knowledge_pack/: __init__.py  activation_service.py  builder.py  extractor.py  schema.py  source_registry.py  storage.py
amprealize/llm/: byok_policy.py  client.py  credential_factory.py  model_readiness.py  retry.py  types.py
amprealize/mcp_tool_manifests/: ai_learning_wiki.lint.json  ai_learning_wiki.query.json  ai_learning_wiki.status.json  auth.deviceInit.json  auth.policy.preview.json  auth.revoke.json  behaviors.approve.json  behaviors.create.json  behaviors.propose.json  behaviors.submit.json  behaviors.update.json  board.createLabel.json  board.listLabels.json  boards.create.json  brainstorm.addIdea.json  brainstorm.closeSession.json  brainstorm.openWhiteboard.json  brainstorm.summarizeBoard.json  config.getModelAvailability.json  conversations.list.json  infra_wiki.ingest.json  infra_wiki.status.json  orgs.delete.json  (+26 more)
deployment/: Dockerfile.api-dev
docs/: CONVERSATION_SYSTEM_PLAN.md  UPSTREAM_SYNC.md  WORK_ITEM_EXECUTION_PLAN.md  WORK_MANAGEMENT_GUIDE.md  capability_matrix.md
extension/: package-lock.json  package.json
infra/: Dockerfile.api  entrypoint.prod.sh  environments.yaml  supervisord.conf
marketing-site/: README.md  astro.config.mjs  package-lock.json  package.json
mcp/: __init__.py
migrations/: env.py
scripts/: benchmark_embedding_models.py  core_parity_check.sh  daily_export_automation.py  nightly_reflection.py  run_postgres_action_migration.py  run_postgres_telemetry_migration.py  run_tests.sh  seed_pack_sources.py  start_amprealize_mcp.py  sync_wiki_from_oss.sh
tests/: conftest.py  reproduce_issue_2.py  test_action_parity.py  test_action_replay_executor.py  test_adherence_tracker.py  test_agent_auth_parity.py  test_agent_auth_service.py  test_agent_lifecycle_actions.py  test_agent_loader.py  test_agent_orchestrator_parity.py  test_agent_performance_parity.py  test_agent_registry_parity.py  test_all_service_parity.py  test_analytics_parity.py  test_analytics_warehouse_parity.py  test_api.py  test_audit_parity.py  test_auto_reflection.py  test_backward_compat_migration.py  test_bci_llm_integration.py  test_behavior_lifecycle_policies.py  test_behavior_parity.py  test_board_service.py  test_bootstrap_detector.py  test_bootstrap_parity.py  test_bootstrap_service.py  test_brainstorm_bridge.py  test_breakeramp_execution.py  test_breakeramp_parity.py  test_breakeramp_resources.py  test_breakeramp_service_telemetry.py  test_chat_action_router.py  test_chat_governance_boundaries.py  test_cli_conversation.py  test_compliance_service_parity.py  test_context_composer.py  test_conversation_events.py  test_conversation_parity.py  test_conversation_rate_limiter.py  test_conversation_reply_routing.py  (+88 more)
web-console/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
(+495 files in other folders)
